# langchain

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
notebooks/: A1-Model_prompt_parser.ipynb  A2-Memory.ipynb  A3-Chains.ipynb  A4-QnA.ipynb  L1-Model_prompt_parser.ipynb
scripts/: A3-Chains.py  a1_model_prompt_parser.py
